Updated CRUD for Orders, Products, Customer

--- a/GeekShop.WebApi/GeekShop.Domain/GeekShop.Domain.csproj
+++ b/GeekShop.WebApi/GeekShop.Domain/GeekShop.Domain.csproj
@@ -7,4 +7,9 @@
     <TreatWarnigsAsErrors>true</TreatWarnigsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
