--- a/GeekShop.WebApi/GeekShop.WebApi/appsettings.json
+++ b/GeekShop.WebApi/GeekShop.WebApi/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "DbSettings": {
-    "ConnectionString": "Server=.\\SQLEXPRESS;Initial Catalog=GeekShop;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "ConnectionString": "Server=.\\SQLEXPRESS;Initial Catalog=GeekShop;Integrated Security=True;TrustServerCertificate=True"
   },
   "ConnectionStrings": {
-    "SqlConnection": "Server=.\\SQLEXPRESS;Initial Catalog=GeekShop;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "SqlConnection": "Server=.\\SQLEXPRESS;Initial Catalog=GeekShop;Integrated Security=True;TrustServerCertificate=True"
   }
 }
